--- a/pom.xml
+++ b/pom.xml
@@ -51,5 +51,10 @@
 	  <artifactId>vecmath</artifactId>
 	  <version>1.3.1</version>
 	 </dependency>
+	 <dependency>
+	  <groupId>java3d</groupId>
+	  <artifactId>j3d-core</artifactId>
+	  <version>1.3.1</version>
+	 </dependency>
 	</dependencies>
 </project>
